        - Collective detached operations have new parameters, a
	  callback function and a argument. This is to be consistent
	  with the detached point-to-point communications.
        - When exchanging user-defined data interfaces, the size of
	  the data is the size returned by the pack operation, i.e
	  data with dynamic size can now be exchanged with StarPU-MPI.
  * Add experimental simgrid support, to simulate execution with various
    number of CPUs, GPUs, amount of memory, etc.
  * Add support for OpenCL simulators (which provide simulated execution time)
  * Add support for Temanejo, a task graph debugger
  * Theoretical bound lp output now includes data transfer time.
  * Update OpenCL driver to only enable CPU devices (the environment
        variable STARPU_OPENCL_ONLY_ON_CPUS must be set to a positive
	value when executing an application)
  * Add Scheduling contexts to separate computation resources
    	- Scheduling policies take into account the set of resources corresponding
	to the context it belongs to
	- Add support to dynamically change scheduling contexts
	(Create and Delete a context, Add Workers to a context, Remove workers from a context)
	- Add support to indicate to which contexts the tasks are submitted
  * Add the Hypervisor to manage the Scheduling Contexts automatically
    	- The Contexts can be registered to the Hypervisor
	- Only the registered contexts are managed by the Hypervisor
	- The Hypervisor can detect the initial distribution of resources of 
	a context and constructs it consequently (the cost of execution is required)
    	- Several policies can adapt dynamically the distribution of resources
	in contexts if the initial one was not appropriate
	- Add a platform to implement new policies of redistribution of resources

Changes:
  * Fix the block filter functions.
  * Fix StarPU-MPI on Darwin.
  * The FxT code can now be used on systems other than Linux.
  * Keep only one hashtable implementation common/uthash.h